--- a/index.html
+++ b/index.html
@@ -13,5 +13,14 @@
 <p1> This me and one of my friends at a party. We are a little bit drunk, and the hangover was pretty bad.</p1>
 </div>
 <a href="https://www.buas.nl">This Is A Link To the school i go to</a>
+<div>
+<img src="images/PhotoBart.jpeg" alt="Bart and Wouter enjoying beer"/>
+</div>
+<div>
+<p1> This is me and one of my at a party. We are also a little bit drunk. </p1>
+</div>
+<div>
+<a href="https://www.buas.nl">This is another link of the school I go to</a>
+</div>
 </body>
 </html>
